plugins {
    id 'application'
    id 'checkstyle'
    id 'jacoco'
    id("io.freefair.lombok") version "8.2.2"
}

group = 'hexlet.code'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation("com.h2database:h2:2.2.220")
    implementation("com.zaxxer:HikariCP:5.0.1")
    compileOnly("org.projectlombok:lombok:1.18.30")
    annotationProcessor("org.projectlombok:lombok:1.18.30")
    implementation 'gg.jte:jte:3.1.1'

    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation 'io.javalin:javalin:5.6.2'
    implementation 'io.javalin:javalin-rendering:5.6.2'
    implementation 'io.javalin:javalin-testtools:5.6.3'
    implementation("org.slf4j:slf4j-simple:2.0.7")


    implementation 'org.postgresql:postgresql:42.6.0'

    implementation 'org.jsoup:jsoup:1.16.1'
    implementation 'com.konghq:unirest-java:4.0.0-RC2'


    implementation 'org.thymeleaf:thymeleaf:3.1.1.RELEASE'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.2.1'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.4.RELEASE'

    implementation 'org.webjars:bootstrap:5.3.2'

    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0'
    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation 'com.konghq:unirest-java:3.14.5'
    testImplementation 'io.ebean:ebean-test:13.22.0'
    testImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.11'
    testImplementation(platform("org.junit:junit-bom:5.10.0"))


}

compileJava {
    options.release = 20
}

application {
    mainClass = 'hexlet.code.App'
}

jacocoTestReport {
    reports {
        xml.required = true
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
    }
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport // report is always generated after tests run
}

task stage(dependsOn: ['clean', 'installDist'])
installDist.mustRunAfter clean

task generateMigrations(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'hexlet.code.MigrationGenerator'
}